# encode-ai-chefgpt

./: .env.example  .gitignore  README.md  pyproject.toml
chefgpt/: chef_personalities.py  chefgpt.py  cli.py
report/: multiagent_report.md
